# morphnet

./: .gitignore  CLAUDE.md  LICENSE  README.md  experiments.py  pyproject.toml  run.py
docs/: LEARNINGS.md  crawler_report.md  evidence_source_analysis.md  for_kushan.md  morphnet_onboarding.md  morphnet_things_to_fix.md
evolving_interface/: __init__.py  computer_use.py  config.py  eval_harness.py  mcp_generator.py  orchestrator.py
evolving_interface/sites/: gitlab.yaml  reddit.yaml  shopping.yaml  shopping_admin.yaml
experiment_results/: experiment_log.txt  experiment_report.txt  learning_curve.json  tool_inventory.json
experiment_results/.mcp_backups/post_run1/gitlab/: tools.json
experiment_results/.mcp_backups/post_run1/reddit/: invocations.json  tools.json
experiment_results/.mcp_backups/post_run1/shopping/: invocations.json  tools.json
experiment_results/.mcp_backups/post_run1/shopping_admin/: tools.json
experiment_results/baseline_learning/: manifest.json  results.jsonl  summary.txt
experiment_results/hard_baseline/: manifest.json  results.jsonl  summary.txt
experiments/: analyze_eval.py  analyze_evidence_sources.py  browser_harness_runner.py  click_tasks_6.json  comparison_100_tasks.json  comparison_10_tasks.json  comparison_50_tasks.json  confirmtkt_20_tasks.json  eval_140_tasks.json  grade_results.py  graph_formation_test.json  path_b_test.json  perfect_graph_test.json  plot_tool_graph.py  real_world_tasks.json  run_comparison.py  run_eval.py  run_eval.sh  run_real_world_tasks.sh  run_tool_test.py  tasks_v2.json  test_graph_in_browser.py  test_perfect_graph_direct.py  test_two_task_e2e.py  trip_planning_20_tasks.json
morphnet/: __init__.py  computer_use.py  executor.py  learner.py  manifest.py  mcp_manager.py  morphnet_orchestrator.py  noise_filter.py  observer.py  reflector.py  representation.py  session_manager.py  trace.py
morphnet/prompts/: array_selection.txt  classify_params.txt  cu_action.txt  cu_context_form.txt  cu_context_listing.txt  cu_context_recovery.txt  cu_context_search.txt  cu_core.txt  cu_plan.txt  intent_extraction.txt  orchestrator_plan.txt  param_generation.txt  reflect_action.txt  tool_naming.txt  verification_task_gen.txt
morphnet_v2/: README.md  draft.md  mutation_types.py  notes.py  page_filter.py  planner.py  session_manager.py  timeline.py  tool_builder.py  tool_executor.py
morphnet_v2/computer_use/: mutation_episode_builder.py  page_agent.py  raw_session.py  schemas.py  v5_markdown.py
morphnet_v2/prompts/: list_selector.j2  page_agent.j2  planner.j2  tool_finaliser.j2
morphnet_v3/: README.md  executor.py  mutation_types.py  notes.py  page_filter.py  planner.py  session_manager.py  temporal.py  tool_builder.py  tool_executor.py
morphnet_v3/computer_use/: page_agent.py  raw_session.py  schemas.py  v7_markdown.py
morphnet_v3/prompts/: list_selector.j2  page_agent.j2  planner.j2  tool_finaliser.j2
prompts/: cu_action.txt  orchestrator_plan.txt  reflect_subtask.txt
tasks/: hard-4site.json  verified-4site.json  webarena-hard-subset.json  webarena-verified.json
