[project]
name = "morphnet"
version = "0.1.0"
description = "Transforms browser automation into reusable API tools. Uses computer use as discovery infrastructure to learn deterministic MCP tool calls from live site traffic."
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rohan Saswade", email = "suswader@gmail.com"},
]
keywords = ["browser-automation", "mcp", "computer-use", "web-agent", "tool-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-genai",
    "python-dotenv",
    "httpx",
    "pydantic",
    "pyyaml",
    "pillow>=12.1.1",
    "curl-cffi>=0.14.0",
    "adblock>=0.6.0",
    "rebrowser-playwright>=1.52.0",
    "playwright-stealth>=2.0.3",
    "matplotlib>=3.10.8",
    "websockets>=13.0",
    "lorem-text>=2.1",
    "jusText>=3.0.2",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[project.urls]
Homepage = "https://github.com/suswader/morphnet"
Repository = "https://github.com/suswader/morphnet"
Issues = "https://github.com/suswader/morphnet/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["morphnet*"]

[tool.setuptools.package-data]
morphnet = ["sites/*/*.json"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
